--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Parsing
@@ -26,7 +28,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Build
@@ -39,7 +43,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Black
@@ -52,7 +58,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Mypy
@@ -65,7 +73,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Mypy
@@ -78,7 +88,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Mypy Ratchet
@@ -91,7 +103,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Coverage
@@ -104,7 +118,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
         # To use nixFlake in the next step
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
@@ -120,7 +136,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Nix
-        uses: cachix/install-nix-action@v8
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: "nixpkgs=channel:nixos-unstable"
       - name: Prefetch shell.nix
         run: 'nix-shell --run true'
       - name: Poetry Locks Consistent
